# BaseFrame

./: BaseFrame.sln  BaseFrame.vcxproj  BaseFrame.vcxproj.filters  CMakeLists.txt  README.md  TestSuite.vcxproj  TestSuite.vcxproj.filters
Include/BaseFrame/: BaseFrame.h
Include/BaseFrame/Core/: Alignment.h  Bugcheck.h  Config.h  Debugger.h  Error.h  Exception.h  Platform.h  Platform_POSIX.h  Platform_WIN32.h  UnWindows.h
Include/BaseFrame/CppUnit/: CppUnit.h  CppUnitException.h  Guards.h  Orthodox.h  RepeatedTest.h  Test.h  TestCaller.h  TestCase.h  TestDecorator.h  TestFailure.h  TestResult.h  TestRunner.h  TestSetup.h  TestSuite.h  TextTestResult.h  estring.h
Src/: CMakeLists.txt
Src/Core/: Bugcheck.cpp  Debugger.cpp  Error.cpp  Exception.cpp
Src/CppUnit/: CppUnitException.cpp  TestCase.cpp  TestDecorator.cpp  TestFailure.cpp  TestResult.cpp  TestRunner.cpp  TestSuite.cpp  TextTestResult.cpp
Test/: BaseFrameTestSuite.cpp  BaseFrameTestSuite.h  CoreTest.cpp  CoreTest.h  CoreTestSuite.cpp  CoreTestSuite.h  Driver.cpp  StringTest.cpp  StringTest.h
